// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList selectors should return AccountList accounts 1`] = `
Object {
  "Account1": Object {
    "generated_status": "running",
    "id": 1,
    "uploaded_status": "running",
  },
  "Account2": Object {
    "generated_status": "failure",
    "id": 2,
    "uploaded_status": "unknown",
  },
  "Account3": Object {
    "generated_status": "running",
    "id": 3,
    "uploaded_status": "success",
  },
}
`;

exports[`AccountList selectors should return AccountList pollingProcessID 1`] = `0`;

exports[`AccountList selectors should return AccountsList 1`] = `
Object {
  "accounts": Object {
    "Account1": Object {
      "generated_status": "running",
      "id": 1,
      "uploaded_status": "running",
    },
    "Account2": Object {
      "generated_status": "failure",
      "id": 2,
      "uploaded_status": "unknown",
    },
    "Account3": Object {
      "generated_status": "running",
      "id": 3,
      "uploaded_status": "success",
    },
  },
  "pollingProcessID": 0,
}
`;
